--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+der<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -102,7 +102,7 @@
           <a href="" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
         </div>
         <div class="col-lg-6 text-center text-lg-right">
-          <img class="img-fluid mt-3 mb-3 " src="img/header.png" alt="" />
+          <img class="img-fluid mt-3 mb-3  header-img" src="img/header.png" alt="" />
         </div>
       </div>
     </div>
